fixed: 1. on PC don't working the progress counter :( 2. the click sound does not work after each click 3. on mobile(after added touchListner) don't working active effect(the shake wrap) 4. the hover sound work when element is hidden(user-dialog) 5. during the dance phase, aftere the swipe the idle-breath(need change on dance)

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -24,15 +24,16 @@
   align-items: stretch;
 }
 
-#header {
+header {
   flex: 10%;
   opacity: 0;
   /* border: dashed 2px rgb(86, 139, 86);
   box-sizing: border-box; */
   transition: 0.25s;
+  pointer-events: none;
 }
 
-#main {
+main {
   flex: 70%;
   opacity: 0;
   /* border: dashed 2px rgb(134, 130, 65);
@@ -41,7 +42,7 @@
   pointer-events: none;
 }
 
-#footer {
+footer {
   flex: 20%;
   opacity: 0;
   transition: 1s;
@@ -61,6 +62,7 @@
   }
 }
 
+/** Start section */
 .ticker {
   white-space: nowrap;
   position: absolute;
@@ -72,7 +74,7 @@
   text-shadow: 6px 4px 2px rgb(0, 0, 0);
   font-size: 46px;
   box-sizing: border-box;
-  animation: textRuner 24s linear infinite;
+  animation: textRuner 28s linear infinite;
 }
 @keyframes textRuner {
   0% {
@@ -161,68 +163,9 @@
     color: pink;
   }
 }
+/** Start section */
 
-#container-game-name {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 60%;
-  width: 50%;
-  /* border: dotted 4px rgba(255, 0, 0, 0.518); */
-}
-
-#game-name {
-  position: relative;
-  writing-mode: vertical-lr;
-  text-orientation: upright;
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
-
-  color: pink;
-  text-shadow: 6px 4px 2px rgba(255, 255, 255, 1);
-  font-size: 4vh;
-  /* border: dotted 4px rgba(255, 0, 0, 0.518); */
-  box-sizing: border-box;
-  scale: 0;
-  opacity: 0;
-  /* animation: nameGame 4s infinite; */
-}
-
-@keyframes nameGame {
-  0% {
-    opacity: 0.4;
-    scale: 0;
-    rotate: 380deg;
-  }
-  25% {
-    opacity: 1;
-    scale: 1.1;
-    rotate: -20deg;
-  }
-  40% {
-    opacity: 1;
-    scale: 1;
-    rotate: -5deg;
-  }
-  55% {
-    opacity: 1;
-    scale: 1;
-    rotate: -10deg;
-  }
-  80% {
-    opacity: 1;
-    scale: 1;
-    rotate: -10deg;
-  }
-
-  100% {
-    opacity: 0;
-    scale: 0;
-    rotate: 420deg;
-  }
-}
-
+/** Header section */
 #container-progres {
   position: relative;
   width: 100%;
@@ -283,6 +226,69 @@
   100% {
     scale: 1;
     rotate: 0deg;
+  }
+}
+/** Header section */
+
+/** Main section */
+#container-game-name {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 60%;
+  width: 50%;
+  /* border: dotted 4px rgba(255, 0, 0, 0.518); */
+}
+
+#game-name {
+  position: relative;
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+
+  color: pink;
+  text-shadow: 6px 4px 2px rgba(255, 255, 255, 1);
+  font-size: 4vh;
+  /* border: dotted 4px rgba(255, 0, 0, 0.518); */
+  box-sizing: border-box;
+  scale: 0;
+  opacity: 0;
+  /* animation: nameGame 4s infinite; */
+}
+
+@keyframes nameGame {
+  0% {
+    opacity: 0.4;
+    scale: 0;
+    rotate: 380deg;
+  }
+  25% {
+    opacity: 1;
+    scale: 1.1;
+    rotate: -20deg;
+  }
+  40% {
+    opacity: 1;
+    scale: 1;
+    rotate: -5deg;
+  }
+  55% {
+    opacity: 1;
+    scale: 1;
+    rotate: -10deg;
+  }
+  80% {
+    opacity: 1;
+    scale: 1;
+    rotate: -10deg;
+  }
+
+  100% {
+    opacity: 0;
+    scale: 0;
+    rotate: 420deg;
   }
 }
 
@@ -381,7 +387,7 @@
     rotate: -5deg;
   }
   40% {
-    scale: 1;
+    scale: 0.95;
     rotate: 5deg;
   }
   60% {
@@ -392,16 +398,71 @@
     rotate: 5deg;
   }
   100% {
-    scale: 1.1;
+    scale: 1;
     rotate: 0deg;
   }
 }
 
+#container-disco {
+  translate: 0 -120px;
+  transition: 3s;
+}
+
+#money {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-size: 125vh;
+  opacity: 0;
+  z-index: 0;
+  transition: 5s;
+}
+
+#disco-ball {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 110px;
+  height: 110px;
+  background-image: url('../img/discoBall.gif');
+  background-repeat: no-repeat;
+  background-size: 118%;
+  background-position: -12px 0;
+  z-index: 10;
+}
+.light {
+  position: absolute;
+  left: 50%;
+  translate: -50% -37%;
+  width: 512px;
+  height: 512px;
+  scale: 0.2;
+
+  background-image: url('../img/light2.png');
+  background-repeat: no-repeat;
+  animation: light 9s linear infinite;
+  opacity: 0;
+}
+.light-opacity {
+  opacity: 30%;
+  scale: 2;
+  transition: 6s;
+}
+
+@keyframes light {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
+/** Main section */
+
+/** Footer section */
 #user-dialog {
   position: absolute;
-  /* translate: 0 -150px; */
   height: 128px;
-  /* width: 80%; */
   left: 8vw;
   right: 8vw;
   bottom: 32vh;
@@ -482,58 +543,4 @@
   }
 }
 
-#container-disco {
-  translate: 0 -120px;
-  transition: 3s;
-}
-
-#money {
-  position: absolute;
-
-  height: 100%;
-  width: 100%;
-  background-size: 125vh;
-  opacity: 0;
-  z-index: 0;
-  transition: 5s;
-}
-
-#disco-ball {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-  width: 110px;
-  height: 110px;
-  background-image: url('../img/discoBall.gif');
-  background-repeat: no-repeat;
-  background-size: 118%;
-  background-position: -12px 0;
-  z-index: 10;
-}
-.light {
-  position: absolute;
-  left: 50%;
-  translate: -50% -37%;
-  width: 512px;
-  height: 512px;
-  scale: 0.2;
-
-  background-image: url('../img/light2.png');
-  background-repeat: no-repeat;
-  animation: light 9s linear infinite;
-  opacity: 0;
-}
-.light-opacity {
-  opacity: 30%;
-  scale: 2;
-  transition: 6s;
-}
-
-@keyframes light {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(-360deg);
-  }
-}
+/** Footer section */
